# fault

./: .ghc.environment.x86_64-darwin-9.6.7  .gitignore  Control-Exception-Fault-Catch.html  Control-Exception-Fault-Class.html  Control-Exception-Fault-Throw.html  Control-Exception-Fault-Type.html  Control-Exception-Fault-Wrap.html  Control-Exception-Fault.html  README.md  cabal.project  doc-index.html  fault.cabal  fault.haddock  index.html
.github/workflows/: ci.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: coapplicative-0.0.2-inplace.conf  fault-0.0.1-inplace.conf  package.cache  profunctor-optics-0.0.3-inplace.conf
src/: Control.Exception.Fault.Catch.html  Control.Exception.Fault.Class.html  Control.Exception.Fault.Throw.html  Control.Exception.Fault.Type.html  Control.Exception.Fault.Wrap.html  Control.Exception.Fault.html
src/Control/Exception/: Fault.hs
src/Control/Exception/Fault/: Catch.hs  Class.hs  Show.hs  Throw.hs  Type.hs  Wrap.hs
src/Test/: Fault.hs
src/Test/Fault/: Render.hs  Report.hs  Show.hs  Throw.hs
test/: Main.hs
