cabal-version: 2.0

name:           fault
version:        0.0.1
synopsis:       A profunctor for fault-tolerant computation.
description:
  The @Fault@ profunctor (@Costar (Either SomeException)@) with
  Arrow, Category, and profunctor instances, plus the @Testable@
  class for property-based testing with structured error reporting.
  .
  See the <https://github.com/cmk/fault#readme README> for more information.

category:       Testing, Profunctors, Exceptions
stability:      Experimental
homepage:       https://github.com/cmk/fault
bug-reports:    https://github.com/cmk/fault/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019-2026 Chris McKinlay
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/fault

library
  exposed-modules:
      Test.Fault
      Test.Fault.Render
      Test.Fault.Report

  default-language: Haskell2010

  hs-source-dirs:
      src

  default-extensions:
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      FlexibleContexts
      FlexibleInstances
      MultiParamTypeClasses
      OverloadedStrings
      QuantifiedConstraints
      RankNTypes
      ScopedTypeVariables
      TupleSections
      TypeApplications
      TypeFamilies

  ghc-options: -Wall

  build-depends:
      base               >= 4.16  && < 5.0
    , array
    , ansi-terminal
    , containers
    , deepseq
    , mtl
    , prettyprinter
    , prettyprinter-ansi-terminal
    , profunctors
    , profunctor-optics
    , text
    , unliftio
