cabal-version: 2.0

name:           fault
version:        0.0.1
synopsis:       Composable exception handlers as a profunctor.
description:
  The @Fault@ type is @Either SomeException a -> b@ — a composable
  exception handler with Arrow, Category, and profunctor instances.
  Combine handlers with '(>>>)', override for specific exceptions with
  '(\<!\>)', and run with 'runFault' or 'withFault'.
  .
  Also provides: type-safe throw\/throwIO distinction ('NotInIO'),
  call stack attachment ('CallStacked'), displayException fix
  ('Display', 'displayExceptions'), and structured error lifting
  ('ExceptFailure').

category:       Control, Exceptions, Profunctors
stability:      Experimental
homepage:       https://github.com/cmk/fault
bug-reports:    https://github.com/cmk/fault/issues
author:         Chris McKinlay
maintainer:     Chris McKinlay
copyright:      2019-2026 Chris McKinlay
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/cmk/fault

library
  exposed-modules:
      Control.Exception.Fault
      Control.Exception.Fault.Show
      Control.Exception.Fault.Throw

  default-language: Haskell2010

  hs-source-dirs:
      src

  default-extensions:
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      FlexibleContexts
      FlexibleInstances
      MultiParamTypeClasses
      OverloadedStrings
      QuantifiedConstraints
      RankNTypes
      ScopedTypeVariables
      TupleSections
      TypeApplications
      TypeFamilies

  ghc-options: -Wall

  build-depends:
      base               >= 4.16  && < 5.0
    , deepseq
    , profunctors
    , transformers
    , unliftio
